[tool.poetry]
name = "hh-to-excel"
version = "0.1.0"
description = ""
authors = ["bl1nkker <nurovich14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.17.2"
bs4 = "^0.0.2"
pandas = "^2.2.0"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
